; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/riched20/extr_editor.c_new_windowW.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/riched20/extr_editor.c_new_windowW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WS_POPUP = common dso_local global i32 0, align 4
@WS_HSCROLL = common dso_local global i32 0, align 4
@WS_VSCROLL = common dso_local global i32 0, align 4
@WS_VISIBLE = common dso_local global i32 0, align 4
@hmoduleRichEdit = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"class: %s, error: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32, i32*)* @new_windowW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @new_windowW(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @WS_POPUP, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @WS_HSCROLL, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @WS_VSCROLL, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @WS_VISIBLE, align 4
  %17 = or i32 %15, %16
  %18 = load i32*, i32** %6, align 8
  %19 = load i32, i32* @hmoduleRichEdit, align 4
  %20 = call i32* @CreateWindowW(i32 %8, i32* null, i32 %17, i32 0, i32 0, i32 200, i32 60, i32* %18, i32* null, i32 %19, i32* null)
  store i32* %20, i32** %7, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = icmp ne i32* %21, null
  %23 = zext i1 %22 to i32
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @wine_dbgstr_w(i32 %24)
  %26 = call i64 (...) @GetLastError()
  %27 = trunc i64 %26 to i32
  %28 = call i32 @ok(i32 %23, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %25, i32 %27)
  %29 = load i32*, i32** %7, align 8
  ret i32* %29
}

declare dso_local i32* @CreateWindowW(i32, i32*, i32, i32, i32, i32, i32, i32*, i32*, i32, i32*) #1

declare dso_local i32 @ok(i32, i8*, i32, i32) #1

declare dso_local i32 @wine_dbgstr_w(i32) #1

declare dso_local i64 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
